agregado de campos editables en el modificar (80%)

--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -231,59 +231,137 @@ $(document).ready(function(){
     @Html.AntiForgeryToken(){
         <div class="elementoModificar" style="display:none">
             <br /><br /><br />
-            @*nombre Del proyecto*@
             <div class="form-group">
-
-                <div class="col-md-10">
-
-                    @Html.HiddenFor(model => model.Solicitud.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.estado, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.fecha, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.prioridadRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.esfuerzoRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.descripcionRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.fechaFinalRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.fechaInicialRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.moduloRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.sprintRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.idReqFunc, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.nombreRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.versionRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.observacionesRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.moduloRF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.responsable1RF, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.HiddenFor(model => model.Solicitud.responsable2RF, new { htmlAttributes = new { @class = "form-control" } })
-                    @*@Html.HiddenFor(model => model.Solicitud.Usuario, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.HiddenFor(model => model.Solicitud.Usuario1, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.HiddenFor(model => model.Solicitud.Usuario2, new { htmlAttributes = new { @class = "form-control" } })*@
-                </div>
+                @Html.LabelFor(model => model.Solicitud.nomProyecto, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Solicitud.nomProyecto, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                @Html.ValidationMessageFor(model => model.Solicitud.nomProyecto, "", new { @class = "text-danger" })
             </div>
-            <br /><br />
+            <div class="form-group">
+                @Html.LabelFor(model => model.Solicitud.idReqFunc, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Solicitud.idReqFunc, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                @Html.ValidationMessageFor(model => model.Solicitud.idReqFunc, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Solicitud.nombreRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Solicitud.nombreRF, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                @Html.ValidationMessageFor(model => model.Solicitud.nombreRF, "", new { @class = "text-danger" })
+            </div>
+            <fieldset name="estimationinfo">
+                <legend>Datos de Estimación</legend>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.esfuerzoRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Solicitud.esfuerzoRF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Solicitud.esfuerzoRF, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.prioridadRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Solicitud.prioridadRF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Solicitud.prioridadRF, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.fechaInicialRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Solicitud.fechaInicialRF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Solicitud.fechaInicialRF, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.fechaFinalRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Solicitud.fechaFinalRF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Solicitud.fechaFinalRF, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Requerimiento.fuente, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @{var fuente2 = Model.UsuarioFuente != null ? Model.UsuarioFuente.nombre + " " + Model.UsuarioFuente.apellidos : " ";}
+                    @Html.EditorFor(model => fuente, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                    @Html.ValidationMessageFor(model => model.Requerimiento.fuente, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.versionReq.responsable1RF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <select class="form-control col-md-2" style="width:20em; " id="d" size="2">
+                        @{var responsable12 = Model.UsuarioResponsable1 != null ? Model.UsuarioResponsable1.nombre + " " + Model.UsuarioResponsable1.apellidos : " ";}
+                        @{var responsable22 = Model.UsuarioResponsable2 != null ? Model.UsuarioResponsable2.nombre + " " + Model.UsuarioResponsable2.apellidos : " ";}
+                        <option>
+                            @Html.DisplayFor(model => responsable1, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                        </option>
 
-            <div>
+                        <option>
+                            @Html.DisplayFor(model => responsable2, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                        </option>
+                    </select>
+                </div>
+            </fieldset>
+
+            <fieldset name="especificinfo">
+                <legend>Especificación de Requerimiento</legend>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.descripcionRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.TextAreaFor(model => model.Solicitud.descripcionRF, new { @class = "form-control", rows = 4 })
+                    @Html.ValidationMessageFor(model => model.Solicitud.descripcionRF, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.observacionesRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.TextAreaFor(model => model.Solicitud.observacionesRF, new { @class = "form-control", rows = 4 })
+                    @Html.ValidationMessageFor(model => model.Solicitud.observacionesRF, "", new { @class = "text-danger" })
+                </div>
+            </fieldset>
+            <fieldset name="generalinfo">
+                <legend>Datos Generales</legend>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.moduloRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Solicitud.moduloRF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Solicitud.moduloRF, "", new { @class = "text-danger" })
+                </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
                     @Html.EditorFor(model => model.Solicitud.estado, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
                     @Html.ValidationMessageFor(model => model.Solicitud.estado, "", new { @class = "text-danger" })
                 </div>
-            </div><br /><br />
-            @*Persona que desea realizar el cambio *@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Solicitud.sprintRF, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Solicitud.sprintRF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Solicitud.sprintRF, "", new { @class = "text-danger" })
+                </div>
+            </fieldset>
+
+            @*nombre Del proyecto*@
             <div class="form-group">
-                <label class="control-label col-md-2">Interesado por el cambio:</label>
-                <div class="col-md-10" style="padding-top:0.5em;">
-                    @Html.DropDownListFor(model => model.Solicitud.realizadoPor, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
+
+                <div class="col-md-10">
+
+                    
+                    @Html.HiddenFor(model => model.Solicitud.fecha, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.HiddenFor(model => model.Solicitud.versionRF, new { htmlAttributes = new { @class = "form-control" } })
+                    
                 </div>
             </div>
             <br /><br />
-            @*Razon por la que se desea realizar el cambio *@
-            <div class="form-group">
-                <label class="control-label col-md-2">Razon de la Solicitud:</label>
-                <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Solicitud.razon, new { @class = "form-control", rows = "4" })
-                    @Html.ValidationMessageFor(model => model.Solicitud.razon, "", new { @class = "text-danger" })
-                </div>
-            </div><br /><br />
+            <fieldset name="infoSolicitud">
+                <legend>Datos de Solicitud</legend>
 
+
+                <div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Solicitud.estado, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                        @Html.ValidationMessageFor(model => model.Solicitud.estado, "", new { @class = "text-danger" })
+                    </div>
+                </div><br /><br />
+                @*Persona que desea realizar el cambio *@
+                <div class="form-group">
+                    <label class="control-label col-md-2">Interesado por el cambio:</label>
+                    <div class="col-md-10" style="padding-top:0.5em;">
+                        @Html.DropDownListFor(model => model.Solicitud.realizadoPor, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
+                    </div>
+                </div>
+                <br /><br />
+                @*Razon por la que se desea realizar el cambio *@
+                <div class="form-group">
+                    <label class="control-label col-md-2">Razon de la Solicitud:</label>
+                    <div class="col-md-10">
+                        @Html.TextAreaFor(model => model.Solicitud.razon, new { @class = "form-control", rows = "4" })
+                        @Html.ValidationMessageFor(model => model.Solicitud.razon, "", new { @class = "text-danger" })
+                    </div>
+                </div><br /><br />
+            </fieldset>
             @*Botones*@
             <div class="form-horizontal">
                 <hr />
@@ -306,6 +384,7 @@ $(document).ready(function(){
     <script>
         function esconderEditar() {
             $('.elementoEditar').hide();
+            $('.elementoNoEditar').hide();
             $('.elementoModificar').show();
 
         }
