--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -112,11 +112,16 @@
             </div>
         </div>
         <br />
-
         <div class="form-group">
             <label class="control-label col-md-2">* Lider:</label>
             <div class="col-md-10" style="padding-top:0.5em;">
-                    @Html.DropDownListFor(model => model.proyecto.lider, (SelectList)ViewBag.Desarrolladores, "Seleccionar Lider", new { @class = "control-label col-md-2" } );
+                    @Html.DropDownListFor(model => model.proyecto.lider, new SelectList(ViewBag.Desarrolladores, "cedula", "names" ), "Seleccionar Lider", new { @class = "control-label col-md-2" } );
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">* Cliente:</label>
+            <div class="col-md-10" style="padding-top:0.5em;">
+                @Html.DropDownListFor(model => model.proyecto.Cliente, new SelectList(ViewBag.Usuarios, "cedula", "names"), "Seleccionar Cliente", new { @class = "control-label col-md-2" });
             </div>
         </div>
 
@@ -130,7 +135,7 @@
         <a class="pull-left" onclick="listbox_moveacross('a', 'd')" href="#">&gt;&gt;</a>
     </div>*@
         <br /><br /><br />
-        <div>
+        @*<div>
             @Html.HiddenFor(model => model.Participantes, new { @id = "output" })
             <form name="calc">
                 <input type="text" id="output" value=" "><br />
@@ -148,7 +153,7 @@
                 <div>
                     <div>
                         <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
-                            @*Aqui se insertan los usuarios*@
+                            @*Aqui se insertan los usuarios
                             @foreach (var item in Model.listaUsuarios)
                             {
                                 var ced = item.cedula;
@@ -162,11 +167,34 @@
                     </div>
                 </div>
             </form>
+        </div>*@
+        <div class="row">
+            <div class="col-md-2">&nbsp;</div>
+            <div class="form-group col-md-4">
+                <label class="control-label"Desarrolladores Asignados></label>
+                @Html.ListBox("selectedOpts", (MultiSelectList)ViewBag.SelectOpts, new { @class = "form-control" })
+            </div>
+            <div class="form-group col-md-1">
+                <div class="form-group">
+                    <button type="button" id="Right" class="btn btn-warning btn-lg">
+                        <span class="glyphicon-arrow-right" aria-hidden="true"></span>    
+                    </button>
+                </div>
+                <div class="form-group">
+                    <button type="button" id="Left" class="btn btn-success btn-lg">
+                        <span class="glyphicon-arrow-left" aria-hidden="true"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="form-group col-md-4">
+                <label class="control-label" Desarrolladores Disponibles></label>
+                @Html.ListBox("AvailableOpts", (MultiSelectList)ViewBag.AvailableOpts, new { @class = "form-control" })
+            </div>
         </div>
         @*Fin cajas de seleccion*@
         <div class="form-group">
             <div class=" col-md-8">
-                <input type="submit" value="Aceptar" class="btn btn-primary" />
+                <input type="submit" id="btnSubmit" value="Aceptar" class="btn btn-primary" />
                 <div class="btn btn-danger" style="color:white;" />
                 @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
             </div>
@@ -176,6 +204,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/multisel")
 
     <script type="text/javascript">
     $(function () {
