--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -109,7 +109,7 @@ window.onload = load_all
             <div class="form-group">
                 <div class="col-md-6">
                     <label class="control-label col-md-3">Fecha Final:</label>
-                    @Html.TextBoxFor(model => model.Requerimiento.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
+                    @Html.TextBoxFor(model => model.Requerimiento.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE2" })
                 </div><br /><br />
             </div>
             <div class="form-group">
