--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -262,14 +262,17 @@ $(document).ready(function(){
                     <div class="form-group">
                         @* @Html.LabelFor(model => model.Solicitud.fechaFinalRF, htmlAttributes: new { @class = "control-label col-md-2" })*@
                         <label class="control-label col-md-2">Fecha Inicial:</label>
-                        @Html.TextBoxFor(model => model.Inicio, new { @class = "form-control datepicker", placeholder = "DATE" })
+                        @Html.HiddenFor(model => model.Solicitud.fechaInicialRF, new { htmlAttributes = new { @class = "form-control" } })
+                        
+                        @Html.TextBoxFor(model => model.Inicio, new { @class = "form-control datepicker2", placeholder = "DATE" })
                        @* @Html.ValidationMessageFor(model => model.Solicitud.fechaInicialRF, "", new { @class = "text-danger" })*@
                     </div>
                     <div class="form-group">
                        @* @Html.LabelFor(model => model.Solicitud.fechaFinalRF, htmlAttributes: new { @class = "control-label col-md-2" })*@
                         <label class="control-label col-md-2">Fecha Final:</label>
                         @Html.HiddenFor(model => model.Solicitud.fechaFinalRF, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.TextBoxFor(model => model.Solicitud.fechaFinalRF, new { @class = "form-control datepicker2", placeholder = "DATE2" })
+
+                        @Html.TextBoxFor(model => model.Final, new { @class = "form-control datepicker2", placeholder = "DATE" })
                        @* @Html.ValidationMessageFor(model => model.Solicitud.fechaFinalRF, "", new { @class = "text-danger" })*@
                     </div>
                     <div class="form-group">
@@ -409,12 +412,12 @@ $(document).ready(function(){
                 $(function () {
                     $('.datepicker, .datepicker2').datepicker("setDate", new Date()); //Initialise any date pickers
                 });
-                $(".datepicker").on("dp.change", function (e) {
+               /* $(".datepicker").on("dp.change", function (e) {
                     $('.datepicker2').data("DatePicker").setMinDate(e.date);
                 });
                 $(".datepicker2").on("dp.change", function (e) {
                     $('.datepicker').data("DatePicker").setMaxDate(e.date);
-                });
+                });*/
 </script>
 
 
